@@ -336,6 +336,8 @@ class SusyNtTools
                    float minMll=MZ-10, float maxMll=MZ+10);
     // NEW Argument useMultiLep will check for mlll and mllll in Z peak
     bool hasZ(const LeptonVector& leps, float massWindow=10., bool useMultiLep=false);
+    bool hasZlll(const LeptonVector& leps, float massWindow=10.);
+    bool hasZllll(const LeptonVector& leps, float massWindow=10.);
     bool hasZWindow(const LeptonVector& leps, float minMll=MZ-10, float maxMll=MZ+10);
     //void bestZ(uint& l1, uint& l2, const LeptonVector& leps, bool ignoreTau=true);
 
